--- a/views/app/index.html
+++ b/views/app/index.html
@@ -1,8 +1,13 @@
 <Body:>
   <ui:connectionAlert>
   <h2>Hello World!</h2>
-  <derby-auth:login />
-  <derby-auth:register />
+  {#if _loggedIn}
+    <span>Logged In</span>
+    <a href="/logout">Logout</a>
+  {else}
+    <derby-auth:login />
+    <derby-auth:register />
+  {/}
 
 <Scripts:>
   <script type=text/javascript src=/js/jquery.js></script>
